--- a/villa.html
+++ b/villa.html
@@ -7,6 +7,7 @@
     </head>
     
     <body>
+        <canvas width="500" height="500" id="villaplatzi"></canvas>
         <script src = "platzi.js"> </script>
     </body>
 </html>
